--- a/index.html
+++ b/index.html
@@ -546,111 +546,166 @@
                 </div>
             </section>
 
-
-            <section class=" tg-haslayout tg-bgstyleone position-relative">
-                <div class="dark-layer"></div>
-                <div class="tg-bgpattrant-2">
-                    <div class="tg-main-section tg-haslayout">
-                    <div class="container position-relative">
-                       <div class="row">
-                           <div class="col-md-12">
-                               <div class="tg-footercol">
-                                   <div class="tg-posttitle">
-                                       <h3>Top products</h3>
-                                   </div>
-                                   <div class="row">
-                                       <div class="col-md-6">
-                                           <div class="tg-toprated">
-                                               <ul>
-
-                                                   <li>
-                                                       <figure>
-                                                           <a href="#">
-                                                               <img src="images/features/img-05.jpg" alt="image description">
-                                                           </a>
-                                                       </figure>
-                                                       <div class="tg-productcontent">
-                                                           <h4><a href="#">Smooth 3-Stripes Scarf</a></h4><span class="tg-stars"><span></span></span>
-                                                           <span class="tg-price">Price: $67</span>
-                                                       </div>
-                                                   </li>
-                                                   <li>
-                                                       <figure>
-                                                           <a href="#">
-                                                               <img src="images/thumbnails/img-06.jpg" alt="image description">
-                                                           </a>
-                                                       </figure>
-                                                       <div class="tg-productcontent">
-                                                           <h4><a href="#">Smooth 3-Stripes Scarf</a></h4><span class="tg-stars"><span></span></span>
-                                                           <span class="tg-price">Price: $67</span>
-                                                       </div>
-                                                   </li>
-                                                   <li>
-                                                       <figure>
-                                                           <a href="#">
-                                                               <img src="images/thumbnails/img-07.jpg" alt="image description">
-                                                           </a>
-                                                       </figure>
-                                                       <div class="tg-productcontent">
-                                                           <h4><a href="#">Smooth 3-Stripes Scarf</a></h4><span class="tg-stars"><span></span></span>
-                                                           <span class="tg-price">Price: $67</span>
-                                                       </div>
-                                                   </li>
-                                               </ul>
-                                           </div>
-                                       </div>
-                                       <div class="col-md-6">
-                                           <div class="tg-toprated">
-                                               <ul>
-
-                                                   <li>
-                                                       <figure>
-                                                           <a href="#">
-                                                               <img src="images/thumbnails/img-05.jpg" alt="image description">
-                                                           </a>
-                                                       </figure>
-                                                       <div class="tg-productcontent">
-                                                           <h4><a href="#">Smooth 3-Stripes Scarf</a></h4><span class="tg-stars"><span></span></span>
-                                                           <span class="tg-price">Price: $67</span>
-                                                       </div>
-                                                   </li>
-                                                   <li>
-                                                       <figure>
-                                                           <a href="#">
-                                                               <img src="images/thumbnails/img-06.jpg" alt="image description">
-                                                           </a>
-                                                       </figure>
-                                                       <div class="tg-productcontent">
-                                                           <h4><a href="#">Smooth 3-Stripes Scarf</a></h4><span class="tg-stars"><span></span></span>
-                                                           <span class="tg-price">Price: $67</span>
-                                                       </div>
-                                                   </li>
-                                                   <li>
-                                                       <figure>
-                                                           <a href="#">
-                                                               <img src="images/thumbnails/img-07.jpg" alt="image description">
-                                                           </a>
-                                                       </figure>
-                                                       <div class="tg-productcontent">
-                                                           <h4><a href="#">Smooth 3-Stripes Scarf</a></h4><span class="tg-stars"><span></span></span>
-                                                           <span class="tg-price">Price: $67</span>
-                                                       </div>
-                                                   </li>
-                                               </ul>
-                                           </div>
-                                       </div>
-                                   </div>
-                                   
-                               </div>
-                           </div>
-                       </div>
+            <section class="tg-main-section tg-haslayout" style="background:url(images/bg/choose-bg.jpg) bottom / cover">
+                <div class="container">
+                    <div class="tg-section-name">
+                        <h2>All Courses</h2>
                     </div>
+                    <div class="col-sm-11 col-xs-11 pull-right">
+
+                        <div class="row">
+                            <div class="tg-posttitle">
+                                <h3>Sports For All Age Group</h3>
+                            </div>
+                            <div class="tg-blogpost">
+                                <div class="row">
+                                    <div class="col-sm-4 col-xs-12">
+                                        <article class="tg-post">
+                                            <figure class="tg-postimg">
+                                                <a href="#">
+                                                    <img src="images/features/oldAgeMeditation.png" alt="image description">
+                                                </a>
+                                                <figcaption>
+                                                    <ul class="tg-postmetadata mb-0">
+                                                        <li><a href="#">Old Age Meditation</a></li>
+                                                        <li><a href="#">All Courses</a></li>
+                                                    </ul>
+                                                </figcaption>
+                                            </figure>
+                                            <div class="tg-posttitle d-flex align-items-center justify-content-between">
+                                                <h3><a href="#">Old Age Meditation</a></h3>
+                                                <a class="tg-btn btn-lg" href="#">Read more</a>
+                                            </div>
+                                            <div class="tg-description">
+                                                <p>Consectetur adipisicing elit sed do eiusmod temport incididunt utia labore et dolore magna aliqua enima.</p>
+                                            </div>
+
+                                        </article>
+                                    </div>
+                                    <div class="col-sm-4 col-xs-12">
+                                        <article class="tg-post">
+                                            <figure class="tg-postimg">
+                                                <a href="#">
+                                                    <img src="images/features/cardio-outdoor-workout.jpg" alt="image description">
+                                                </a>
+                                                <figcaption>
+                                                    <ul class="tg-postmetadata mb-0">
+                                                        <li><a href="#">Cardio Outdoor Workout</a></li>
+                                                        <li><a href="#">All Courses</a></li>
+                                                    </ul>
+                                                </figcaption>
+                                            </figure>
+                                            <div class="tg-posttitle d-flex align-items-center justify-content-between">
+                                                <h3><a href="#">Cardio Outdoor Workout</a></h3>
+                                                <a class="tg-btn btn-lg" href="#">Read more</a>
+                                            </div>
+                                            <div class="tg-description">
+                                                <p>Consectetur adipisicing elit sed do eiusmod temport incididunt utia labore et dolore magna aliqua enima.</p>
+                                            </div>
+
+                                        </article>
+                                    </div>
+                                    <div class="col-sm-4 col-xs-12">
+                                        <article class="tg-post">
+                                            <figure class="tg-postimg">
+                                                <a href="#">
+                                                    <img src="images/features/event.jpg" alt="image description">
+                                                </a>
+                                                <figcaption>
+                                                    <ul class="tg-postmetadata mb-0">
+                                                        <li><a href="#">Event / Party Organization</a></li>
+                                                        <li><a href="#">All Courses</a></li>
+                                                    </ul>
+                                                </figcaption>
+                                            </figure>
+                                            <div class="tg-posttitle d-flex align-items-center justify-content-between">
+                                                <h3><a href="#">Event / Party Organization</a></h3>
+                                                <a class="tg-btn btn-lg" href="#">Read more</a>
+                                            </div>
+                                            <div class="tg-description">
+                                                <p>Consectetur adipisicing elit sed do eiusmod temport incididunt utia labore et dolore magna aliqua enima.</p>
+                                            </div>
+
+                                        </article>
+                                    </div>
+
+                                    <div class="col-sm-4 col-xs-12">
+                                        <article class="tg-post">
+                                            <figure class="tg-postimg">
+                                                <a href="#">
+                                                    <img src="images/features/FitnessMantra.jpeg" alt="image description">
+                                                </a>
+                                                <figcaption>
+                                                    <ul class="tg-postmetadata mb-0">
+                                                        <li><a href="#">Fitness Mantra</a></li>
+                                                        <li><a href="#">All Courses</a></li>
+                                                    </ul>
+                                                </figcaption>
+                                            </figure>
+                                            <div class="tg-posttitle d-flex align-items-center justify-content-between">
+                                                <h3><a href="#">Fitness Mantra</a></h3>
+                                                <a class="tg-btn btn-lg" href="#">Read more</a>
+                                            </div>
+                                            <div class="tg-description">
+                                                <p>Consectetur adipisicing elit sed do eiusmod temport incididunt utia labore et dolore magna aliqua enima.</p>
+                                            </div>
+
+                                        </article>
+                                    </div>
+                                    <div class="col-sm-4 col-xs-12">
+                                        <article class="tg-post">
+                                            <figure class="tg-postimg">
+                                                <a href="#">
+                                                    <img src="images/features/yoga.jpg" alt="image description">
+                                                </a>
+                                                <figcaption>
+                                                    <ul class="tg-postmetadata mb-0">
+                                                        <li><a href="#">Yoga</a></li>
+                                                        <li><a href="#">All Courses</a></li>
+                                                    </ul>
+                                                </figcaption>
+                                            </figure>
+                                            <div class="tg-posttitle d-flex align-items-center justify-content-between">
+                                                <h3><a href="#">yoga</a></h3>
+                                                <a class="tg-btn btn-lg" href="#">Read more</a>
+                                            </div>
+                                            <div class="tg-description">
+                                                <p>Consectetur adipisicing elit sed do eiusmod temport incididunt utia labore et dolore magna aliqua enima.</p>
+                                            </div>
+
+                                        </article>
+                                    </div>
+                                    <div class="col-sm-4 col-xs-12">
+                                        <article class="tg-post">
+                                            <figure class="tg-postimg">
+                                                <a href="#">
+                                                    <img src="images/features/Zumba.jpg" alt="image description">
+                                                </a>
+                                                <figcaption>
+                                                    <ul class="tg-postmetadata mb-0">
+                                                        <li><a href="#">Zumba</a></li>
+                                                        <li><a href="#">All Courses</a></li>
+                                                    </ul>
+                                                </figcaption>
+                                            </figure>
+                                            <div class="tg-posttitle d-flex align-items-center justify-content-between">
+                                                <h3><a href="#">Zumba</a></h3>
+                                                <a class="tg-btn btn-lg" href="#">Read more</a>
+                                            </div>
+                                            <div class="tg-description">
+                                                <p>Consectetur adipisicing elit sed do eiusmod temport incididunt utia labore et dolore magna aliqua enima.</p>
+                                            </div>
+
+                                        </article>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
 
-
-            <section class=" tg-haslayout tg-bgstyleone position-relative d-none">
+            <section class=" tg-haslayout tg-bgstyleone position-relative">
                 <div class="dark-layer"></div>
                 <div class="tg-bgpattrant-2">
                     <div class="container position-relative">
