--- a/GroundBook.html
+++ b/GroundBook.html
@@ -323,7 +323,7 @@
 
                     <div class="s-booking-main">
                         <span class="img-punch">
-                            <img src="images/source/img-01.png" />
+                            <img src="images/slider/img-01.png" />
                         </span>
 
                         <div class="s-booking-form">
@@ -347,14 +347,14 @@
                                 <div class="s-booking-tabs">
                                     <!-- Nav tabs -->
                                     <ul class="nav nav-tabs border-0">
-                                        <li>
+                                        <!--<li>
                                             <a class="s-book-tab hvr-icon-wobble-vertical active" data-toggle="tab" href="#Location">
                                                 <img src="images/icon/placeholder.svg" class="position-relative hvr-icon" style="height: 17px;top: -2px;" /> Book & Play
                                             </a>
-                                        </li>
+                                        </li>-->
                                         <li>
                                             <a class="s-book-tab hvr-icon-rotate" style="padding-left:32px" data-toggle="tab" href="#GTManage">
-                                                <img src="images/icon/football-court.svg " class="hvr-icon" style="height: 30px; position: absolute; left: 0; top: 6px;" />  GROUND / TURF MANAGEMENT
+                                                <img src="images/icon/football-court.svg " class="hvr-icon" style="height: 30px; position: absolute; left: 0; top: 6px;" />  AVAILABLE VENUES
                                             </a>
                                         </li>
                                     </ul>
@@ -377,37 +377,17 @@
                                                                 <div class="float-left1">
                                                                     <div class="ms-header">
                                                                         <h2 class="ms-header__title">
-                                                                            Looking for a
-                                                                            <div class="ms-slider">
-                                                                                <ul class="ms-slider__words">
-                                                                                    <li class="ms-slider__word">Turf ?</li>
-                                                                                    <li class="ms-slider__word">Event Organization ?</li>
-                                                                                    <li class="ms-slider__word">Fitness Mantra ?</li>
-                                                                                    <li class="ms-slider__word">Yoga Morning Time ?</li>
-                                                                                    <li class="ms-slider__word">Zumba Training ?</li>
-                                                                                    <li class="ms-slider__word">Full Body Cardio Workout ?</li>
-                                                                                    <li class="ms-slider__word">Old Age Meditation ?</li>
-                                                                                    <!-- This last word needs to duplicate the first one to ensure a smooth infinite animation -->
-                                                                                    <li class="ms-slider__word">Turf ?</li>
-                                                                                </ul>
-                                                                            </div>
+                                                                            SELECT YOUR Preferred <span>VENUE Location , Date & time</span>                                                                           
                                                                         </h2>
                                                                     </div>
 
-                                                                    <p class="d-inline">
-                                                                        Search for football, cricket, hockey turfs near you.
-                                                                    </p>
+                                                                    <!--<p class="d-inline">
+                                                                        Search for VENUE LOCATION .
+                                                                    </p>-->
                                                                 </div>
                                                             </div>
-                                                            <div class="col-md-6">
-                                                                <fieldset class="float-right1 ">
-                                                                    <div class="form-group d-flex">
-                                                                        <input type="text" class="form-control" placeholder="Search Location">
-
-                                                                        <a href="javascript(void:0)" style="padding:0 35px" class="tg-btn d-flex align-items-center justify-content-center hvr-icon-wobble-horizontal"> <i class="fa fa-search mr-3 hvr-icon"></i> Search</a>
-                                                                    </div>
-
-                                                                </fieldset>
+                                                            <div class="col-md-6 jb-sprites1">
+                                                               
                                                             </div>
                                                         </div>
 
@@ -415,7 +395,7 @@
 
 
                                                     <div class="row">
-                                                        <div class="col-lg-4">
+                                                        <div class="col-lg-3">
                                                             <label class="text-white mb-3 lead text-uppercase">Select your Venue location</label>
                                                             <!-- Multiselect dropdown -->
                                                             <select multiple data-style="bg-white rounded-pill px-4 py-3 shadow-sm " class="selectpicker w-100">
@@ -436,9 +416,19 @@
                                                                 </div>
                                                             </div><!-- DEnd ate Picker Input -->
                                                         </div>
-                                                        <div class="col-lg-3">
+                                                        <div class="col-lg-2">
+                                                            <label class="text-white mb-3 lead text-uppercase">Start Time</label>
                                                             <div class="bfh-timepicker" data-mode="12h">
                                                             </div>
+                                                        </div>
+                                                        <div class="col-lg-2">
+                                                            <label class="text-white mb-3 lead text-uppercase">End Time</label>
+                                                            <div class="bfh-timepicker" data-mode="12h">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-lg-2">
+                                                            <label class="text-white mb-3 lead text-uppercase visible-hidden" >Search</label>
+                                                            <a href="javascript(void:0)" style="padding:0 35px" class="tg-btn rounded-pill d-flex align-items-center justify-content-center hvr-icon-wobble-horizontal"> <i class="fa fa-search mr-3 hvr-icon"></i> Search</a>
                                                         </div>
                                                     </div>
 
