--- a/GroundBook.html
+++ b/GroundBook.html
@@ -230,14 +230,12 @@
                                 <div class="tg-colhalf">
                                     <ul>
                                         <li class="active">
-                                            <a href="#">Home</a>
+                                            <a href="index.html">Home</a>
                                         </li>
                                         <li>
                                             <a href="#">About Us</a>
                                         </li>
-                                        <li>
-                                            <a href="#">Book & Play</a>
-                                        </li>
+                                        <li><a href="GroundBook.html">Book & Play</a></li>
                                         <li>
                                             <a href="#">Book for Events</a>
                                         </li>
