--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a href="#">Main</a>
                         <ul class="tg-dropdown-menu">
                             <li class="active"><a href="index-2.html">home1</a></li>
-                            <li><a href="index2.html">home2</a></li>
+                            <li><a href="index.html">home2</a></li>
                         </ul>
                     </li>
 
@@ -186,12 +186,12 @@
                                 <div class="tg-colhalf">
                                     <ul>
                                         <li class="active">
-                                            <a href="#">Home</a>
+                                            <a href="index.html">Home</a>
                                         </li>
                                         <li>
                                             <a href="#">About Us</a>
                                         </li>
-                                        <li><a href="#">Book & Play</a></li>
+                                        <li><a href="GroundBook.html">Book & Play</a></li>
                                         <li>
                                             <a href="#">Book for Events</a>
                                         </li>
