--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
             <div class="s-booking-main">
                 <span class="img-punch">
-                    <img src="images/shop/img-01.png" />
+                    <img src="images/slider/img-02.png" />
                 </span>
 
                 <div class="s-booking-form">
